# abgen-rs

./: .gitignore  CLEANROOM.md  Cargo.toml  Makefile  NOTICES.md  README.md  abgen-cdn.sh  abgen-serve.py  flake.nix  package.nix
dev/: CONVERSION_FAILURES.md  PARITY_STATUS.md  README.md  RESEARCH_AREAS.md  broken_content_report.sh  check_determinism.sh  check_doc_links.py  check_goldens.sh  goldens.json  parity_compare.py  parity_floors.json  parity_gate.sh  structural-cases.json
dev/bc7_kernel/: README.md  bc7kernel_harness.c  sweep_one.sh
dev/fix_proposals/: bc7_texel_walkdown_session.md  glb_animated_size_session.md  glb_emote_clip_size.md  glb_scene_16bit_png_truncation.md  glb_scene_size_class_val300.md  glb_scene_size_session.md  glb_wearable_big_size_session.md  glb_wearable_mesh_stream_length.md  mesh-tangent-1ulp_research.md  (+10 more)
docs/: README.md
examples/: abgen-validate.rs  bc7bleed.rs  bc7diff.rs  bc7field.rs  bc7forensic.rs  bc7kernel_probe.rs  bc7kernel_rustscore.rs  bc7modes.rs  bc7pix.rs  bc7po2.rs  bc7probe.rs  bc7profile_split.rs  bc7sweep.rs  bc7tie.rs  bc7tieprobe.rs  bind_diffs.rs  bind_dump.rs  bleedloc.rs  bleedreal.rs  bleedsplit.rs  bleedtrue.rs  bleedvariant.rs  byteid_set.rs  cabmap.rs  canonicalize_tos.rs  cat7drill.rs  classify_pair.rs  clip_cmp.rs  clipidx_scan.rs  clipidxprobe.rs  cls_fit.rs  collapse_boundary.rs  corrupt_mesh.rs  ctrl_cmp.rs  ctrlsize_probe.rs  decode_dist.rs  diff_classify.rs  divmul.rs  dump_ab.rs  dump_census.rs  (+71 more)
shaders/: bc7_mode6.wgsl
src/: animation.rs  animation_mecanim.rs  bc7_mode_tree.rs  bc7_pure.rs  builder.rs  cabname.rs  catalyst.rs  compress.rs  draco.rs  ffi.rs  glbscan.rs  gltf.rs  lib.rs  local_store.rs  lods.rs  manifest.rs  materials.rs  mesh_layout.rs  naming.rs  pathids.rs  regen.rs  ress.rs  sbp_order.rs  scene.rs  tangents.rs  texprofile.rs  wearables.rs
tests/: validate_samples.rs
(+275 files in other folders)
